fixed spacing issues on front page and project pages

--- a/app/assets/stylesheets/base/global.scss
+++ b/app/assets/stylesheets/base/global.scss
@@ -55,12 +55,12 @@ body, .article {
 // MAIN CONTAINER 
 
 #main-container {
-    padding: 66px 2em;
+    padding: 55px 2em;
 }
 
 @media only screen and (max-width: 1000px) {
   #main-container {
-        padding: 64px 2em;
+        padding: 55px 2em;
     }
 }
 
